# BACK-END/routes/index.js
@@ -1,14 +1,15 @@
-const express = require("express");
+const express = require('express');
 const router = express.Router();
-const userRoutes = require("./user.routes");
-const resepRoutes = require("./resep.routes");
-const authRoutes = require("./auth.routes");
+const userRoutes = require('./user.routes');
+const authRoutes = require('./auth.routes');
+const productsRoutes = require('./product.routes');
+
 // endpoint user
-router.use("/users", userRoutes);
+router.use('/users', userRoutes);
 
 // endpoint auth
-router.use("/auth", authRoutes);
-//endpoint resep
-router.use("/reseps", resepRoutes);
+router.use('/auth', authRoutes);
 
+//endpoint products
+router.use('/products', productsRoutes);
 module.exports = router;
