# BACK-END/routes/product.routes.js
@@ -1,0 +1,9 @@
+const express = require('express');
+
+const { getDummyProducts } = require('../controllers/productController');
+const router = express.Router();
+
+// Admin: get all users (protected route, admin role required)
+router.get('/', getDummyProducts);
+
+module.exports = router;
