# BACK-END/routes/resep.routes.js
@@ -1,8 +1,0 @@
- 
-const express = require('express');
-const { getResepHandler } = require('../controllers/resepController');
-const router = express.Router();
-
-router.get('/resep1', getResepHandler);
-
-module.exports = router;
